<resources>
    <string name="app_name">Wise</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_camera">Camera</string>
    <string name="title_hospital">Hospital</string>
    <string name="title_history">History</string>
    <string name="title_setting">Setting</string>
    <string name="desc_click_to_caputre">Click to Caputre</string>
    <string name="failed_to_start_camera">Failed to start camera</string>
    <string name="permission_request_granted">Permission request granted</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="wound_scanner">Wound Scanner</string>
    <string name="click_to_back">Click to back</string>
    <string name="click_to_activate_flash">Click to Activate Flash</string>
    <string name="no_image_selected">No image selected</string>
    <string name="gallery_preview">Gallery Preview</string>
    <string name="image_saved_to_gallery">Image Saved to Gallery</string>
    <string name="failed_to_save_image_to_gallery">Failed to Save Image to Gallery.</string>
    <string name="scan_result">Scan Result</string>
    <string name="image_result">Image Result</string>
    <string name="image_not_found">Image not Found</string>
    <string name="history_title">History Title</string>
    <string name="calendar_icon">Calendar Icon</string>
    <string name="hospital_icon">Hospital Icon</string>
    <string name="next">Next</string>
    <string name="onboarding_image">Onboarding Image</string>
    <string name="hospital_images">Hospital Images</string>
    <string name="nearby">Nearby</string>
    <string name="nearby_hospitals">Nearby Hospitals</string>
    <string name="history">History</string>
    <string name="burns">Burns</string>
    <string name="you_have_a_burns_in_your_skin">You have a Burns in your skin</string>
    <string name="add_to_medical_record">Add to Medical Record</string>
    <string name="no_data">No Data</string>
    <string name="skin_image">Skin Image</string>
</resources>