<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.detail.DetailActivity">

<ImageView
    android:id="@+id/iv_back"
    android:layout_width="32dp"
    android:layout_height="32dp"
    android:layout_marginStart="16dp"
    android:contentDescription="@string/click_to_back"
    android:src="@drawable/ic_back"
    app:layout_constraintBottom_toBottomOf="@+id/tv_detail_app_bar"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/tv_detail_app_bar" />

<TextView
    android:id="@+id/tv_detail_app_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:gravity="center"
    android:text="@string/scan_result"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintVertical_bias="0"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_app_bar">

        <ImageView
            android:id="@+id/iv_image"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_result" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>