<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/bg_rounded_border">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/history_title"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@tools:sample/full_names"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/md_theme_in_active_icon"
        android:contentDescription="@string/history_title"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@tools:sample/full_names"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"/>

    <ImageView
        android:id="@+id/iv_date"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/calendar_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle"
        android:src="@drawable/ic_calendar"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_hospital_black_24dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/md_theme_in_active_icon"
        app:layout_constraintBottom_toBottomOf="@+id/iv_date"
        app:layout_constraintStart_toEndOf="@+id/iv_date"
        app:layout_constraintTop_toTopOf="@+id/iv_date"
        tools:text="@tools:sample/date/ddmmyy" />

    <ImageView
        android:id="@+id/iv_hospital"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/hospital_icon"
        android:src="@drawable/ic_hospital_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_date" />

    <TextView
        android:id="@+id/tv_hospital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/md_theme_in_active_icon"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_hospital"
        app:layout_constraintStart_toEndOf="@+id/iv_date"
        app:layout_constraintTop_toBottomOf="@+id/iv_date"
        tools:text="@tools:sample/full_names" />


</androidx.constraintlayout.widget.ConstraintLayout>