<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/m3_bottom_nav_min_height"
    tools:context=".ui.camera.CameraFragment"
    tools:ignore="PrivateResource">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/click_to_back"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/tv_camera_app_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_camera_app_bar" />

    <TextView
        android:id="@+id/tv_camera_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/wound_scanner"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cv_capture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_camera_app_bar">

        <androidx.camera.view.PreviewView
            android:id="@+id/pv_camera"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_gallery"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:cardCornerRadius="8dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/md_theme_in_active_icon"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/cv_capture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cv_capture">
        <ImageView
            android:id="@+id/iv_gallery"
            android:scaleType="centerCrop"
            android:contentDescription="@string/gallery_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_capture"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:cardElevation="0dp"
        android:layout_margin="24dp"
        app:cardCornerRadius="100dp"
        android:backgroundTint="@color/md_theme_in_active_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/cv_gallery"
        app:layout_constraintEnd_toStartOf="@id/cv_flash">
        <androidx.cardview.widget.CardView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            app:cardCornerRadius="75dp"
            app:cardElevation="0dp"
            android:backgroundTint="@color/md_theme_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_flash"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        android:backgroundTint="@color/md_theme_background"
        app:layout_constraintBottom_toBottomOf="@+id/cv_capture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cv_capture">
        <ImageView
            android:id="@+id/iv_flash"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:contentDescription="@string/click_to_activate_flash"
            android:src="@drawable/ic_flash_inactive"
            app:tint="@color/md_theme_in_active_icon" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>